<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditMyPlaceComponent.EditMyPlaceActivity"
    tools:showIn="@layout/activity_edit_my_place"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label"
        >
    </TextView>

    <EditText
        android:id="@+id/editmyplace_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label"
        >
    </TextView>

    <EditText
        android:id="@+id/editmyplace_desc_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </EditText>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/editmyplace_finish_btn"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/editmyplace_cancel_btn"
            android:layout_weight="1"
            android:text="@string/editmyplace_cancel_label"
            />

    </TableRow>

</LinearLayout>